--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <i class="fas fa-times" onclick="popUp()"
           ><img src="images/times-circle-regular.svg" alt="fechar"
         /></i>
-        <img src="images/download.png" width="150" alt="imagem comentário" />
+        <img src="./imagens/download.png" width="150" alt="imagem comentário" />
         <h4>Ajude dando a sua opinião</h4>
         <div class="input-box">
           <textarea
@@ -95,22 +95,22 @@
     <ul id="socialLinks">
       <li class="youtube">
         <a href="https://www.youtube.com" target="_blank">
-          <img src="images/youtube.svg" alt="ícone youtube" />
+          <img src="./imagens/youtube.svg" alt="ícone youtube" />
         </a>
       </li>
       <li class="instagram">
         <a href="https://instagram.com" target="_blank">
-          <img src="images/instagram.svg" alt="ícone instagram" />
+          <img src="./imagens/instagram.svg" alt="ícone instagram" />
         </a>
       </li>
       <li class="facebook">
         <a href="https://www.facebook.com" target="_blank">
-          <img src="images/facebook.svg" alt="ícone facebook" />
+          <img src="./imagens/facebook.svg" alt="ícone facebook" />
         </a>
       </li>
       <li class="twitter">
         <a href="https://twitter.com" target="_blank">
-          <img src="images/twitter.svg" alt="ícone twitter" />
+          <img src="./imagens/twitter.svg" alt="ícone twitter" />
         </a>
       </li>
     </ul>
