--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
     <ul id="socialLinks">
       <li class="youtube">
         <a href="https://www.youtube.com" target="_blank">
-          <img src="./imagens/youtube.svg" alt="ícone youtube" />
+          <img src="/imagens/youtube.svg" alt="ícone youtube" />
         </a>
       </li>
       <li class="instagram">
         <a href="https://instagram.com" target="_blank">
-          <img src="./imagens/instagram.svg" alt="ícone instagram" />
+          <img src="imagens/instagram.svg" alt="ícone instagram" />
         </a>
       </li>
       <li class="facebook">
